Tue Mar  1 00:47:51 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/CORBALOC_Parser.cpp:

	  Include "ace/os_include/os_netdb.h" to pull in MAXHOSTNAMELEN
	  constant.

	* tao/Invocation_Adapter.cpp (invoke_i):

	* tao/TAO_Server_Request.cpp (tao_send_reply):
	  (tao_send_reply_exception):

	  Do not attempt to send a reply over the transport in the
	  collocated case.  There is no transport in that case.

	* tao/TAO_Server_Request.h (collocated):
	* tao/TAO_Server_Request.i (collocated):

	  New accessor that returns true if the current request is
	  collocated.

	* tao/PortableServer/Servant_Base.cpp
	  (synchronous_upcall_dispatch):

	  Re-throw the caught exception in the collocated case.  The
	  exception must be directly reported to the collocated client
	  since the exception will not be marshaled and sent back to the
	  client side ORB.

Tue Mar  1 08:03:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ObjRefTemplate/ORT_Adapter_Impl.{h,cpp}:
        * tao/ObjRefTemplate/ORT_Adapter_Factory_Impl.{h,cpp}:
        * tao/PortableServer/ORT_Adapter_Factory.{h,cpp}:
        * tao/PortableServer/ORT_Adapter.{h,cpp}:
          Removed not needed destructors

Mon Feb 28 20:31:35 2005  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_constant/constant_ch.cpp:
        * TAO_IDL/be/be_visitor_constant/constant_cs.cpp:

          Enabled inlined code generation for constants
          (constant's value is assigned in the header file declaration)
          when the constant is declared inside an interface, home,
          valuetype or eventtype. The only documented problem with
          inlined code generation for these types of constants is
          when pre-compiled headers are used, in which case the IDL
          compiler option -Guc can be used to explicitly turn off
          inline constant generation. Thanks to Steve Baker
          <steven_d_baker@raytheon.com> for redirecting our attention